--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "Chat5000",
+  "name": "expatiate.js",
   "version": "0.1.0",
   "description": "The best node chat app on the planet!",
   "main": "server.js",
   "dependencies": {
     "express": "~3.4.8",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "redis": "0.10.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "express": "~3.4.8",
+    "socket.io": "~0.9.16",
+    "redis": "0.10.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -17,9 +22,15 @@
     "url": "https://github.com/photonerddan/gets_n_puts.git"
   },
   "author": "Joseph Chappell, Matthew Van Dusen",
-  "license": "MIT License",
+  "license": "MIT license",
   "bugs": {
     "url": "https://github.com/photonerddan/gets_n_puts/issues"
   },
-  "homepage": "https://github.com/photonerddan/gets_n_puts"
+  "homepage": "https://github.com/photonerddan/gets_n_puts",
+  "keywords": [
+    "chat",
+    "javascript",
+    "node",
+    "google_oauth"
+  ]
 }
